--- a/snapshot_tools/package.xml
+++ b/snapshot_tools/package.xml
@@ -45,6 +45,7 @@
   <build_export_depend>message_runtime</build_export_depend>
   <exec_depend>message_runtime</exec_depend>
 
+  <depend>image_pipeline</depend>
   <depend>rospy</depend>
   <depend>sensor_msgs</depend>
   <depend>std_srvs</depend>
